postgresql-common (221) UNRELEASED; urgency=medium

  * Test-depend on debhelper for the pg_buildext tests.
  * Skip pg_buildext tests when invoked from postgresql-NN server tests.
  * dh_make_pgxs: Support running with older debhelper versions.

 -- Christoph Berg <myon@debian.org>  Tue, 13 Oct 2020 15:18:29 +0200

postgresql-common (220) unstable; urgency=medium

  * dh_make_pgxs: Use dh --with pgxs in template.
  * dh_make_pgxs: Add `R³: no` to control.in template.
  * debhelper: Use dpkg_architecture_value() instead of hostarch() because
    Dh_Lib.pm on stretch and xenial doesn't have the latter yet.
  * Add t/190_pg_buildext.t covering pg_buildext and debhelper integration.

 -- Christoph Berg <myon@debian.org>  Mon, 12 Oct 2020 23:21:52 +0200

postgresql-common (219) unstable; urgency=medium

  * postgresql-server-dev-all: Depend on strict postgresql-common version.
  * pg_virtualenv: Export PGVERSION with the PostgreSQL major version.
  * pg_virtualenv: Add -p option to set extension_destdir.
  * pg_buildext: Add "virtualenv" action that loops over shells for testing.
  * pg_buildext: Fix "installed-versions" for empty package name suffixes.
  * pg_buildext: Don't update debian/control if debian/control.in is missing.
  * Move dh_pgxs_test after dh_link so we have the links in the install trees.
  * Skip invoking dh_pgxs_test if nocheck is set, or when on hurd-i386.

 -- Christoph Berg <myon@debian.org>  Tue, 06 Oct 2020 23:26:00 +0200

postgresql-common (218) unstable; urgency=medium

  * pg_buildext installcheck: Set DESTDIR during build-time tests.
  * pg_buildext clean: Do not assume Makefile to be present. (Closes: #971517)

 -- Christoph Berg <myon@debian.org>  Fri, 02 Oct 2020 12:49:44 +0200

postgresql-common (217) unstable; urgency=medium

  * Set PostgreSQL 13 as default version.
  * pg_upgradecluster: Rename wal_keep_segments to wal_keep_size on upgrades
    to PG 13.
  * pg_createcluster: Add option --quiet to suppress initdb output and make